fix: fix restart button stretching
Restart button didn't stretch properly

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,6 +126,7 @@ body {
     margin: 1rem;
   }
   &__options {
+    justify-self: stretch;
     flex-direction: column;
   }
 }
@@ -149,6 +150,7 @@ body {
     }
   }
   &__img {
+    width: 7rem;
     padding: 1rem;
     margin-top: 1rem;
     border: 2px solid var(--white);
